--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -29,7 +29,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "Container (Dockerfile) JOCIVAN": {
+    "Container (Dockerfile) THACIO": {
       "commandName": "Docker",
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
